# Vertx3D

./: LICENSE
MSVC/Vertx3D/include/: vertx3d.h
MSVC/Vertx3D/include/vx_core/: vx_camera.h  vx_mesh.h  vx_model.h  vx_sound.h  vx_window.h
MSVC/Vertx3D/include/vx_engine/: vx_entity.h
MSVC/Vertx3D/include/vx_gui/: vx_frame.h  vx_label.h
MSVC/Vertx3D/include/vx_input/: vx_input.h  vx_mouse.h
MSVC/Vertx3D/include/vx_math/: vx_physics.h
MSVC/Vertx3D/src/core/: vx_camera.cpp  vx_mesh.cpp  vx_model.cpp  vx_sound.cpp  vx_window.cpp
MSVC/Vertx3D/src/input/: vx_input.cpp  vx_mouse.cpp
MSVC/Vertx3D/src/math/: vx_physics.cpp
MSVC/Vertx3D/src/vx_gui/: vx_frame.cpp  vx_label.cpp
Pre-Compiled/Vertx3D-MINGW64/CMake/: CMakeLists.txt  Expected_organization.txt
Pre-Compiled/Vertx3D-MINGW64/DOC/For MINGW64/: How_to_configure_cmake.txt
Pre-Compiled/Vertx3D-MINGW64/DOC/For MSVC/: How_to_compile_with_MSVC.txt
Pre-Compiled/Vertx3D-MINGW64/Vertx3D/include/vx_core/: vx_mesh.h  vx_sound.h
Pre-Compiled/Vertx3D-MINGW64/Vertx3D/include/vx_engine/: vx_scene.h
Pre-Compiled/Vertx3D-MINGW64/Vertx3D/include/vx_gui/: vx_label.h
Pre-Compiled/Vertx3D-MINGW64/Vertx3D/include/vx_input/: vx_input.h  vx_mouse.h
Pre-Compiled/Vertx3D-MSVC/: README.md
Pre-Compiled/Vertx3D-MSVC/DOC/For MSVC/: How_to_solve_dll_problem.txt
Pre-Compiled/Vertx3D-MSVC/Vertx3D/include/vx_core/: vx_camera.h
Pre-Compiled/Vertx3D-MSVC/examples/: cube.cpp
include/: vertx3d.h
include/vx_core/: vx_model.h  vx_window.h
include/vx_gui/: vx_frame.h
include/vx_math/: vx_physics.h
src/core/: vx_camera.cpp  vx_mesh.cpp  vx_model.cpp  vx_sound.cpp  vx_window.cpp
src/input/: vx_input.cpp  vx_mouse.cpp
src/math/: vx_physics.cpp
src/vx_gui/: vx_frame.cpp  vx_label.cpp
